--- a/src/container/config/banner.less
+++ b/src/container/config/banner.less
@@ -26,6 +26,10 @@
       width: 20%;
     }
     &:nth-child(4){
+      flex: 1;
+      width: 20%;
+    }
+    &:nth-child(5){
       width: 78px;
     }
   }
