--- a/src/App.less
+++ b/src/App.less
@@ -142,7 +142,7 @@
 }
 
 .edit-btn{
-  text-align: center;
+  text-align: right;
   .ant-btn{
     margin-left: 15px;
   }
@@ -165,4 +165,21 @@
 
 .float-right{
   float:right;
+}
+
+.upload-file{
+  input{
+    width: 100%;
+    height: 100%;
+
+    display: inline-block;
+  }
+}
+
+.gutter-box{
+  margin-bottom: 20px;
+}
+
+small{
+  font-size: 14px !important;
 }
