--- a/src/container/config/banner.less
+++ b/src/container/config/banner.less
@@ -11,7 +11,7 @@
   .banner-table-cell{
     vertical-align: middle;
     padding: 10px 8px;
-
+    word-break:break-all;
     border-right: 1px solid #e9e9e9;
     border-bottom: 1px solid #e9e9e9;
     img{
