--- a/src/container/news/index.less
+++ b/src/container/news/index.less
@@ -14,10 +14,12 @@
       margin: 10px;
       background: #000000;
       border-radius: 50%;
+      overflow: hidden;
       img{
-        width: 40px;
-        height: 40px;
-        margin-top: 8px;
+        width: 60px;
+        height: 60px;
+        min-width: 60px;
+        min-height: 60px;
       }
     }
   }
@@ -61,7 +63,7 @@
       width: 100%;
       height: auto;
       img{
-        max-width: 100%;
+        max-width: 50%;
         height: auto;
         cursor: zoom-in;
       }
