--- a/src/container/news/index.less
+++ b/src/container/news/index.less
@@ -16,10 +16,11 @@
       border-radius: 50%;
       overflow: hidden;
       img{
-        width: 60px;
-        height: 60px;
-        min-width: 60px;
-        min-height: 60px;
+        width: 40px;
+        height: 40px;
+        min-width: 40px;
+        min-height: 40px;
+        margin-top: 8px;
       }
     }
   }
