--- a/src/App.less
+++ b/src/App.less
@@ -22,9 +22,13 @@
 .ant-table-small .ant-table-thead > tr > th{
   background: #f7f7f7 !important;
 }
+.logo{
+  display: none;
+}
 .ant-layout{
   height: 100%;
   .logo{
+    display: block;
     height: 32px;
     background: #333;
     border-radius: 6px;
@@ -155,11 +159,16 @@
 .operate-box{
   margin-bottom: 15px;
   margin-top: 15px;
+  overflow: hidden;
   .search-wrap{
     display: inline-block;
+    &>span{
+      margin-top: 8px;
+    }
     .btn{
       float: none;
       margin-left: 8px;
+      margin-top: 8px;
     }
   }
   .ant-btn{
