--- a/src/App.less
+++ b/src/App.less
@@ -63,16 +63,13 @@
   .trigger:hover {
     color: #1DA57A;
   }
-  .logout{
-    float: right;
-    color: #ffffff;
-    margin-right: 10px;
+  .user-icon{
     cursor: pointer;
-    display: inline-block;
-    vertical-align: middle;
-    &:hover{
-      text-decoration: underline;
-    }
+    margin: 16px;
+  }
+  .menu{
+    width: 160px;
+    margin-right: 8px;
   }
 }
 
